# gwpe-plotting-tools

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
gwpe-plotting-tools/: __init__.py  logging_config.py  plot_posterior.py  posteriors.py
gwpe_plotting_tools/: constants.py  gwutils.py  logging_config.py  plot_posterior.py  posteriors.py
tests/: __init__.py  conftest.py  test_compatibility.py  test_constants.py  test_gwutils.py  test_logging_config.py  test_posteriors.py
